fix(sideNav): add project and project visibility buttons always visible for touch

--- a/src/app/core-ui/magic-side-nav/nav-item/nav-item.component.scss
+++ b/src/app/core-ui/magic-side-nav/nav-item/nav-item.component.scss
@@ -142,6 +142,11 @@
   width: 100%;
   text-align: left;
   font-size: 14px;
+  //justify-content: center;
+  //
+  //::ng-deep .mat-mdc-menu-item-text {
+  //  margin-right: auto;
+  //}
 
   &:hover {
     background: var(--sidenav-hover);
@@ -246,14 +251,5 @@
 
   .task-count {
     display: none;
-  }
-}
-
-@include mq(xs, max) {
-  :host-context(.nav-sidenav.compactMode) {
-    .nav-link {
-      justify-content: flex-start;
-      padding: 10px 12px;
-    }
   }
 }
